registration form fixed
